# backend/api/src/main/python/openapi_server/models/animal_config_update_guardrails.py
@@ -3,8 +3,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
+from openapi_server.models.animal_config_update_guardrails_custom_inner import AnimalConfigUpdateGuardrailsCustomInner
 from openapi_server import util
 
+from openapi_server.models.animal_config_update_guardrails_custom_inner import AnimalConfigUpdateGuardrailsCustomInner  # noqa: E501
 
 class AnimalConfigUpdateGuardrails(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -12,31 +14,26 @@ class AnimalConfigUpdateGuardrails(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, safe_mode=None, content_filter=None, response_length_limit=None):  # noqa: E501
+    def __init__(self, selected=None, custom=None):  # noqa: E501
         """AnimalConfigUpdateGuardrails - a model defined in OpenAPI
 
-        :param safe_mode: The safe_mode of this AnimalConfigUpdateGuardrails.  # noqa: E501
-        :type safe_mode: bool
-        :param content_filter: The content_filter of this AnimalConfigUpdateGuardrails.  # noqa: E501
-        :type content_filter: bool
-        :param response_length_limit: The response_length_limit of this AnimalConfigUpdateGuardrails.  # noqa: E501
-        :type response_length_limit: int
+        :param selected: The selected of this AnimalConfigUpdateGuardrails.  # noqa: E501
+        :type selected: List[str]
+        :param custom: The custom of this AnimalConfigUpdateGuardrails.  # noqa: E501
+        :type custom: List[AnimalConfigUpdateGuardrailsCustomInner]
         """
         self.openapi_types = {
-            'safe_mode': bool,
-            'content_filter': bool,
-            'response_length_limit': int
+            'selected': List[str],
+            'custom': List[AnimalConfigUpdateGuardrailsCustomInner]
         }
 
         self.attribute_map = {
-            'safe_mode': 'safe_mode',
-            'content_filter': 'content_filter',
-            'response_length_limit': 'response_length_limit'
+            'selected': 'selected',
+            'custom': 'custom'
         }
 
-        self._safe_mode = safe_mode
-        self._content_filter = content_filter
-        self._response_length_limit = response_length_limit
+        self._selected = selected
+        self._custom = custom
 
     @classmethod
     def from_dict(cls, dikt) -> 'AnimalConfigUpdateGuardrails':
@@ -50,68 +47,47 @@ class AnimalConfigUpdateGuardrails(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def safe_mode(self) -> bool:
-        """Gets the safe_mode of this AnimalConfigUpdateGuardrails.
+    def selected(self) -> List[str]:
+        """Gets the selected of this AnimalConfigUpdateGuardrails.
 
+        List of guardrail IDs to apply to this animal  # noqa: E501
 
-        :return: The safe_mode of this AnimalConfigUpdateGuardrails.
-        :rtype: bool
+        :return: The selected of this AnimalConfigUpdateGuardrails.
+        :rtype: List[str]
         """
-        return self._safe_mode
+        return self._selected
 
-    @safe_mode.setter
-    def safe_mode(self, safe_mode: bool):
-        """Sets the safe_mode of this AnimalConfigUpdateGuardrails.
+    @selected.setter
+    def selected(self, selected: List[str]):
+        """Sets the selected of this AnimalConfigUpdateGuardrails.
 
+        List of guardrail IDs to apply to this animal  # noqa: E501
 
-        :param safe_mode: The safe_mode of this AnimalConfigUpdateGuardrails.
-        :type safe_mode: bool
+        :param selected: The selected of this AnimalConfigUpdateGuardrails.
+        :type selected: List[str]
         """
 
-        self._safe_mode = safe_mode
+        self._selected = selected
 
     @property
-    def content_filter(self) -> bool:
-        """Gets the content_filter of this AnimalConfigUpdateGuardrails.
+    def custom(self) -> List[AnimalConfigUpdateGuardrailsCustomInner]:
+        """Gets the custom of this AnimalConfigUpdateGuardrails.
 
+        Custom guardrails specific to this animal  # noqa: E501
 
-        :return: The content_filter of this AnimalConfigUpdateGuardrails.
-        :rtype: bool
+        :return: The custom of this AnimalConfigUpdateGuardrails.
+        :rtype: List[AnimalConfigUpdateGuardrailsCustomInner]
         """
-        return self._content_filter
+        return self._custom
 
-    @content_filter.setter
-    def content_filter(self, content_filter: bool):
-        """Sets the content_filter of this AnimalConfigUpdateGuardrails.
+    @custom.setter
+    def custom(self, custom: List[AnimalConfigUpdateGuardrailsCustomInner]):
+        """Sets the custom of this AnimalConfigUpdateGuardrails.
 
+        Custom guardrails specific to this animal  # noqa: E501
 
-        :param content_filter: The content_filter of this AnimalConfigUpdateGuardrails.
-        :type content_filter: bool
+        :param custom: The custom of this AnimalConfigUpdateGuardrails.
+        :type custom: List[AnimalConfigUpdateGuardrailsCustomInner]
         """
 
-        self._content_filter = content_filter
-
-    @property
-    def response_length_limit(self) -> int:
-        """Gets the response_length_limit of this AnimalConfigUpdateGuardrails.
-
-
-        :return: The response_length_limit of this AnimalConfigUpdateGuardrails.
-        :rtype: int
-        """
-        return self._response_length_limit
-
-    @response_length_limit.setter
-    def response_length_limit(self, response_length_limit: int):
-        """Sets the response_length_limit of this AnimalConfigUpdateGuardrails.
-
-
-        :param response_length_limit: The response_length_limit of this AnimalConfigUpdateGuardrails.
-        :type response_length_limit: int
-        """
-        if response_length_limit is not None and response_length_limit > 2000:  # noqa: E501
-            raise ValueError("Invalid value for `response_length_limit`, must be a value less than or equal to `2000`")  # noqa: E501
-        if response_length_limit is not None and response_length_limit < 50:  # noqa: E501
-            raise ValueError("Invalid value for `response_length_limit`, must be a value greater than or equal to `50`")  # noqa: E501
-
-        self._response_length_limit = response_length_limit
+        self._custom = custom
