# backend/api/src/main/python/openapi_server/models/apply_guardrail_template200_response.py
@@ -1,0 +1,91 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class ApplyGuardrailTemplate200Response(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, guardrails_applied=None, animal_id=None):  # noqa: E501
+        """ApplyGuardrailTemplate200Response - a model defined in OpenAPI
+
+        :param guardrails_applied: The guardrails_applied of this ApplyGuardrailTemplate200Response.  # noqa: E501
+        :type guardrails_applied: int
+        :param animal_id: The animal_id of this ApplyGuardrailTemplate200Response.  # noqa: E501
+        :type animal_id: str
+        """
+        self.openapi_types = {
+            'guardrails_applied': int,
+            'animal_id': str
+        }
+
+        self.attribute_map = {
+            'guardrails_applied': 'guardrailsApplied',
+            'animal_id': 'animalId'
+        }
+
+        self._guardrails_applied = guardrails_applied
+        self._animal_id = animal_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ApplyGuardrailTemplate200Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The applyGuardrailTemplate_200_response of this ApplyGuardrailTemplate200Response.  # noqa: E501
+        :rtype: ApplyGuardrailTemplate200Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def guardrails_applied(self) -> int:
+        """Gets the guardrails_applied of this ApplyGuardrailTemplate200Response.
+
+        Number of guardrails applied  # noqa: E501
+
+        :return: The guardrails_applied of this ApplyGuardrailTemplate200Response.
+        :rtype: int
+        """
+        return self._guardrails_applied
+
+    @guardrails_applied.setter
+    def guardrails_applied(self, guardrails_applied: int):
+        """Sets the guardrails_applied of this ApplyGuardrailTemplate200Response.
+
+        Number of guardrails applied  # noqa: E501
+
+        :param guardrails_applied: The guardrails_applied of this ApplyGuardrailTemplate200Response.
+        :type guardrails_applied: int
+        """
+
+        self._guardrails_applied = guardrails_applied
+
+    @property
+    def animal_id(self) -> str:
+        """Gets the animal_id of this ApplyGuardrailTemplate200Response.
+
+        Animal ID that received the guardrails  # noqa: E501
+
+        :return: The animal_id of this ApplyGuardrailTemplate200Response.
+        :rtype: str
+        """
+        return self._animal_id
+
+    @animal_id.setter
+    def animal_id(self, animal_id: str):
+        """Sets the animal_id of this ApplyGuardrailTemplate200Response.
+
+        Animal ID that received the guardrails  # noqa: E501
+
+        :param animal_id: The animal_id of this ApplyGuardrailTemplate200Response.
+        :type animal_id: str
+        """
+
+        self._animal_id = animal_id
